# rustdiff

./: .gitignore  Cargo.toml  README.md
data/: sample.txt  sample_modified.txt
data/output/: delta.json  patch.json  signs.json
src/: delta.rs  error.rs  lib.rs  main.rs  patch.rs  sign.rs  utils.rs
src/algorithms/: adler_32.rs  algorithm.rs  fletcher_32.rs  mod.rs
tests/: integration.rs
