[package]
name = "rustdiff"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "*"
rand = "*"
blake2 = "*"
thiserror = "*"
simple_logger = "*"
serde_json = "*"
serde = { version = "*", features = ["derive"] }
clap = { version = "*", features = ["derive"] }
